--- a/index.html
+++ b/index.html
@@ -30,10 +30,18 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
-<h3>
-<a id="cheeky-hearts" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Cheeky Hearts Sticker Pack</h3>
+<h3>Cheeky Hearts Sticker Pack</h3>
 
 <p>Treat your friends to a cheeky heart or two with our Cheeky Hearts sticker pack.</p>
+        
+<h3>Rain Maker: Make it Rain Sticker Pack</h3>
+        
+Make it Rain!
+
+Show your friends just how much of a balla you really are with the Rain Maker: Make it Rain sticker pack. Throw them dollar bills at whatever or whoever you like ;)
+
+Tell us what currencies you'd like to see added on Twitter @shmilnerappdev
+
 
 <h3>
 <a id="support-and-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support/Contact</h3>
